--- a/4º Año/Bases de Datos/Unidad 12/1. Bases de Datos no Relacionales.md
+++ b/4º Año/Bases de Datos/Unidad 12/1. Bases de Datos no Relacionales.md
@@ -56,3 +56,26 @@ Los sistemas pueden ser consistentemente fuertes o eventualmente consistentes, d
 >En sistemas eventualmente consistentes, hay un período en el que las copias de los datos no están sincronizadas, lo que puede ser aceptable para aplicaciones de solo lectura o almacenes de datos que no cambian con frecuencia, como archivos históricos. Sin embargo, las actualizaciones y eliminaciones en estos sistemas pueden implicar complejidades adicionales, como la resolución de conflictos entre escrituras en diferentes nodos. Los sistemas eventualmente consistentes suelen ser preferidos para inserciones, pero las actualizaciones y eliminaciones pueden presentar compensaciones que complican la aplicación.
 
 La mayoría de los equipos de desarrollo esperan sistemas muy consistentes, y la elección del modelo de consistencia implica diferentes compensaciones en términos de consistencia y disponibilidad, debido a que a mayor sea el grado de consistencia menor será la disponibilidad de los datos. Los sistemas eventualmente consistentes pueden ofrecer ventajas en inserciones a costa de lecturas, actualizaciones y eliminaciones más complejas. Aunque la atomicidad de registro único es suficiente para muchas aplicaciones, no lo es para todas. MongoDB, por ejemplo, proporciona garantías ACID multidocumento, facilitando el abordaje de una amplia gama de casos de uso con una única plataforma de datos.
+
+## Flexibilidad y Patrones en Mongo DB
+
+El diseño adecuado del esquema en bases de datos no relacionales permite almacenar más datos de entidad por documento en comparación con una fila en una base de datos relacional. Este tipo de bases de datos ofrece un esquema flexible que acelera el desarrollo al evitar la necesidad de actualizar las asignaciones de clases ORM o recompilar clases de lenguajes de programación. Además, los cambios en el esquema se pueden realizar sin bloquear la base de datos ni degradar su rendimiento, eliminando dependencias complejas entre equipos y la necesidad de coordinación costosa antes de implementar nuevas versiones de código. Los esquemas se pueden modificar en tiempo de ejecución.
+En cuanto a la capacidad de consulta, estas bases de datos permiten realizar búsquedas con condiciones múltiples, geoespaciales (por coordenadas o ubicaciones geográficas), y consultas avanzadas de texto. También ofrecen soporte nativo para JSON binario, permiten realizar JOINs mediante `$lookup`, y consultas por grafos a través de `$graphLookup`.
+Los patrones de uso en MongoDB dependen del tipo de aplicación y la forma en que se accede a los datos. Es fundamental considerar el rendimiento, la escalabilidad y la simplicidad al implementarlos.
+
+1. **Approximation (Aproximación)**: Este patrón es útil cuando se realizan cálculos costosos con frecuencia y la precisión no es crítica. Con este patrón minimizamos las escrituras en la base de datos y asegurando el mantenimiento de números estadísticamente válidos. Con la desventaja de que los números no son exactos y la implementación recae en la aplicación, es decir, es la aplicación la que controla las actualizaciones.
+2. **Polymorphic (Polimórfico)**: Ideal para situaciones en la cual hay documentos con más similitudes que diferencias y necesitamos que los datos se mantengan en una sola colección. Este patrón es fácil de implementar y permite centralizar todas consultas en una única colección.
+3. **Attribute (Atributo)**: Útil cuando se trabaja con documentos grandes que comparten un subconjunto de campos con características comunes, pero existe un subconjunto de datos que comparten una característica en común. Con la aplicación de este patrón se minimiza la cantidad índices para la consulta y las consultas son más sencillas y rápidas.
+4. **Bucket**: Excelente para aquellas situaciones que necesitan gestionar transmisiones de datos, series temporales o aplicaciones de IoT. Reduce el número total de documentos, mejora el rendimiento del índice y simplifica el acceso a los datos mediante agregación previa. Generalmente, este patrón suele combinarse con otros como el *Computed*.
+5. **Computed (Calculado)**: Ideal para aquellas situaciones en la que se emplean patrones de acceso intensivo a datos y se realizan cálculos de forma repetitiva. Este patrón reduce la carga de la CPU y las consultas se vuelven más fácil de escribir y por lo general más rápidas. El mayor percance de este patrón es que puede ser difícil identificar la situación adecuada para su utilización, además se debe evitar la aplicación innecesaria de este patrón.
+6. **Document Versioning (Versionado de Documentos)**: Ideado para aquellas situaciones en la que se tiene que mantener versiones anteriores de documentos en MongoDB. El patrón es fácil de implementar en sistemas existentes y no genera un impacto real en el rendimiento de las consultas. Con el percance de que duplica el número de escrituras y las consultas deben dirigirse a la colección correcta.
+7. **Schema Versioning (Versionado de Esquema)**: Ideal para aplicaciones que experimentan cambios en el esquema de datos a lo largo de su vida útil y se requiere que las versiones actuales del documento coexistan con las antiguas versiones. El patrón no requiere tiempo de inactividad, facilita la migración de esquemas y reduce la deuda técnica futura. La principal desventaja de este patrón radica en que es posible que se requieran dos índices durante la migración.
+
+>[!note] Consideraciones del Patrón Scheme Versioning
+>Al implementar este patrón en un sistema existente, se suele agregar un nuevo campo para especificar la versión del esquema, de este modo la aplicación sabrá como manera dicho documento en particular.
+
+8. **Extended Reference (Referencia Extendida)**: Útil para aplicaciones que utilizan muchas operaciones JOIN para reunir datos frecuentemente accesibles. Mejora el rendimiento y reduce el número de JOINs. Con la desventaja de que se duplican muchos datos, la cual requiere adicionalmente chequeos para asegurarse que el dato esté actualizado.
+9. **Outlier (Valores Atípicos)**: Solución para documentos o consultas que no encajan en los patrones de datos típicos. El patrón evita que unos pocos documentos determinen la solución de una aplicación, las consultas se adaptan a casos de uso típico, pero aún contemplan los valores atípicos. La principal desventaja de este patrón es que se suelen adaptar bien a consultas específicas, pero no tan bien para consultas ad-hoc, además la implementación se realiza mediante código de aplicación lo cual no es muy recomendado.
+10. **Pre-allocation (Asignación Previa)**: Adecuado cuando se conoce la estructura del documento y solo se necesita llenarlo con datos. El patrón simplifica el diseño. Pero puede haber un trade-off entre simplicidad y rendimiento.
+11. **Subset (Subconjunto)**: Pensado para aquellas situaciones en donde el conjunto de trabajo excede la capacidad de la RAM debido a documentos grandes. El patrón reduce el tamaño total del conjunto de trabajo y el tiempo de acceso al disco para aquellos datos utilizados más frecuentemente. La principal desventaja es que se debe gestionar los subconjuntos y la necesidad de accesos adicionales para obtener datos completos.
+12. **Tree (Árbol)**: Ideada para situaciones donde los datos posean una estructura jerárquica y se realizan consultan frecuentemente. El patrón mejora el rendimiento evitando múltiples operaciones JOIN. Con el percance de que las actualizaciones deben gestionarse en la aplicación.
