--- a/4º Año/Bases de Datos/Unidad 4/4. SQL Embebido y SQL Dinamico.md
+++ b/4º Año/Bases de Datos/Unidad 4/4. SQL Embebido y SQL Dinamico.md
@@ -1,17 +1,30 @@
-SQL proporciona un lenguaje de consultas declarativo muy potente. La formulación de consultas en SQL es normalmente mucho más sencilla que la formulación de las mismas en un lenguaje de programación de propósito general, sin embargo, es necesario el acceso a una base de datos desde un lenguaje de programación de propósito general. Ya que no todas las consultas pueden expresarse en SQL, por ejemplo, las acciones no declarativas, tale como impresión de informes, interacción con usuarios, el envío de los resultados de una consulta a una interfaz gráfica, entre otras. Muchos sistemas de gestión de base de datos proporcionan lenguajes de procedimientos que le permite a los usuarios de las bases de datos construir bloques anónimos, procedimientos almacenados, funciones, triggers, entre otras cosas varias.
+SQL proporciona un lenguaje de consultas declarativo muy potente. La formulación de consultas en SQL es normalmente mucho más sencilla que la formulación de las mismas en un lenguaje de programación de propósito general. Sin embargo, es necesario el acceso a una base de datos desde un lenguaje de programación de propósito general, ya que no todas las consultas pueden expresarse en SQL, por ejemplo, las acciones no declarativas, tale como impresión de informes, interacción con usuarios, el envío de los resultados de una consulta a una interfaz gráfica, entre otras.
+Muchos sistemas de gestión de base de datos proporcionan lenguajes de procedimientos que le permite a los usuarios de las bases de datos construir bloques anónimos, procedimientos almacenados, funciones, triggers, entre otras cosas varias, aun así la función de los lenguajes de procedimientos sigue siendo limitada.
 
 ## SQL Embebido
 
-La norma SQL define la utilización de SQL dentro de varios lenguajes de programación, tales como C, Cobol, Pascal, Java, PL/I y Fortran. Un lenguaje en el cual se introducen consultas SQL se denomina lenguaje anfitrión y las estructuras SQL que se admiten en el lenguaje anfitrión constituyen SQL embebido. Para identificar las consultas de SQL embebido, se utiliza la instrucción EXEC SQL, aunque su sintáxis puede variar. Por ejemplo, la incorporación de SQL en Java usa la sintaxis `SQL { <instrucción de SQL embebido > };`.
-También se pueden crear cursores, los cuales actúan como iteradores que se utilizan para recorrer los registros fila por fila o simplemente para almacenar los resultados de la consulta SQL. Estos cursores deben ser declarados en el lenguaje anfitrión, luego abiertos para poder evaluar la consulta, luego utilizar la instrucción `fetch` para obtener cada uno de los resultados de la consulta en una variable del lenguaje anfitrión, una ves se haya hecho esto se cierra el cursos.
+La norma SQL define la utilización de SQL dentro de varios lenguajes de programación, tales como C, Cobol, Pascal, Java, PL/I y Fortran. Esta forma incorporada de SQL amplía aún más la capacidad de los programadores de manipular las bases de datos. En SQL incorporado toda la ejecución de las consultas la realiza el sistema de bases de datos, que luego pone el resultado de
+la consulta a disposición del programa.
+Un lenguaje en el cual se introducen consultas SQL se denomina lenguaje anfitrión y las estructuras SQL que se admiten en el lenguaje anfitrión constituyen SQL embebido. Para identificar las consultas de SQL embebido, se utiliza la instrucción `EXEC SQL <instruccion SQL> END-EXEC`, aunque su sintáxis puede variar de un lenguaje a otro.
+
+>[!tldr] Preprocesado del SQL Embebido
+>Al momento de la compilación de los programas, los diferentes lenguajes con SQL embebido llaman a un preprocesador que reemplaza la consulta embebida por una serie de métodos y procedimientos que permiten conectarse a la base de datos y realizar la petición de forma apropiada.
+
+Las instrucciones de SQL incorporado son parecidas en cuanto a la forma a las instrucciones de SQL convencionales. Sin embargo, hay varias diferencias, la primera es que para formular una consulta relacional se debe declarar un cursor. El resultado de la consulta no se calcula todavía. En vez de eso, el programa debe utilizar los comandos `open` y `fetch` para obtener las tuplas resultado.
+
+>[!info] Apertura e Iteración de un Cursor
+>Cuando declaramos un cursor no estamos realizando una consulta a la base de datos, en cierta forma solo estamos abstrayendo una consulta, en caso de que queramos comenzar a operar sobre los datos de la base de datos debemos abrir el cursor con la instrucción `open`, esto creará un puntero que apunte al primer registro de la consulta, con `fetch` se pueden trasladar los resultados a variables del lenguaje anfitrión. Solo se traerá un único registro a la vez, en caso de querer acceder al resto de registros se tendrá que comenzar a iterar sobre el cursor.
+>Una vez que haya terminado de operar sobre los datos se recomienda cerrar el cursor utilizando `close`, ya que los cursores ocupan espacio en memoria y dependiendo el tipo de consulta la cantidad de recursos ocupados puede ser significativo.
+
+El SQL embebido permite que los programas en el lenguaje anfitrión tengan acceso a la base de datos, pero no proporciona ninguna ayuda para la presentación de los resultados al usuario ni para la generación de informes.
 
 ## SQL Dinámico
 
-El SQL dinámico se refiere a la capacidad de construir consultas SQL en tiempo de ejecución, adaptándolas a diversas condiciones y necesidades específicas, ODBC y JDBC permiten realizar estas consultas dinámicas desde los programas de aplicación, aunque no sean SQL dinámico como tal, veamos un poco más sobre estas dos APIs.
+El SQL dinámico se refiere a la capacidad de construir consultas SQL en tiempo de ejecución, adaptándolas a diversas condiciones y necesidades específicas. ODBC y JDBC permiten realizar estas consultas dinámicas desde los programas de aplicación de una manera mucho más sencilla que la definida por el estándar SQL, aunque no sean SQL dinámico como tal, veamos un poco más sobre estas dos APIs.
 
 ### Open Data Base Connectivity (ODBC)
 
-Define una interfaz para programas de aplicación (API) que pueden usar las aplicaciones para:
+La norma ODBC define el modo de comunicación entre los programas de aplicación y los servidores de bases de datos. Define una interfaz para programas de aplicación (API) que pueden usar las aplicaciones para:
 
 1. Abrir una conexión con una base de datos.
 2. Enviar consultas y/o actualizaciones.
@@ -22,11 +35,14 @@ Para realizar estas consultas, primero se debe configurar la conexión, especifi
 
 ### Java Data Base Conectivity (JDBC)
 
-JDBC es una API de la librería estándar de Java que nos permite acceder a bases de datos relacionales o a cualquier tipo de datos tabulares. Consiste en un conjunto de clases e interfaces que nos proveen aun API completa para la programación con Bases de Datos. A grandes rasgos esta API te permite:
+JDBC es una API de la librería estándar de Java que nos permite acceder a bases de datos relacionales o a cualquier tipo de datos tabulares. Consiste en un conjunto de clases e interfaces que nos proveen una API completa para la programación con bases de datos. A grandes rasgos esta API te permite:
 
-- Establecer una conexión a una Fuente de Datos.
-- Enviar sentencias SQL a la Fuente de Datos.
+- Establecer una conexión a una fuente de datos.
+- Enviar sentencias SQL a la fuente de datos.
 - Procesar los resultados obtenidos.
 
 Debido a que utiliza Java, esta API te permite construir tu programa una sola vez, pudiendo ser ejecutado en cualquier plataforma y utilizando distintas bases de datos, siempre y cuando provean un ***Driver*** para JDBC.
-La forma en la que se realiza las consultas con esta API es la misma para cualquier base de datos, lo único que cambia es el driver pasado como parámetro al método `getConnection()` del objeto `DriverManager`.
+
+>[!tldr] Utilización del JDBC
+>La forma en la que se realiza las consultas con esta API es la misma para cualquier base de datos, lo único que cambia es el driver pasado como parámetro al método `getConnection()` del objeto `DriverManager` y el como se estructuran las consultas SQL que se pasan a los demás métodos de la API.
+
