--- a/4º Año/Bases de Datos/Unidad 8/3. Organizacion por Asociacion.md
+++ b/4º Año/Bases de Datos/Unidad 8/3. Organizacion por Asociacion.md
@@ -7,18 +7,18 @@ En una organización de archivos por asociación se obtiene la dirección del bl
 >
 >![[descfinicion-formal-asociacion.png]]
 
-Sea $h$ una función asociación, para insertar un registro con clave de búsqueda $K_i$, calcularemos $h(K_i)$, lo que proporciona la dirección del cajón para ese registro. Para realizar una búsqueda con el valor $K_i$ de la clave de búsqueda, simplemente se calcula $h(K_i)$ y luego se busca el cajón con esa dirección. Supongamos que dos clave de búsqueda, $K_5$ y $K_7$, tienen el mismo valor de asociación, es decir, $h(K_5) = h(K_7)$. Si se realiza una búsqueda en $K_5$, el cajón $h(K_5)$ contendrá registros con valores de la clave de búsqueda $K_5$ y registros con valores de la clave de búsqueda $K_7$. Por esta razón hay que comprobar el valor de clave de búsqueda de cada registro en el cajón para verificar que el registro es el que queremos, el procedimiento es muy similar para el proceso de borrado y actualización de datos.
+Sea $h$ una función asociación, para insertar un registro con clave de búsqueda $K_i$, calcularemos $h(K_i)$, lo que proporciona la dirección del cajón para ese registro. Para realizar una búsqueda con el valor $K_i$ de la clave de búsqueda, simplemente se calcula $h(K_i)$ y luego se busca el cajón con esa dirección. Supongamos que dos claves de búsqueda, $K_5$ y $K_7$, tienen el mismo valor de asociación, es decir, $h(K_5) = h(K_7)$. Si se realiza una búsqueda en $K_5$, el cajón $h(K_5)$ contendrá registros con valores de la clave de búsqueda $K_5$ y registros con valores de la clave de búsqueda $K_7$. Por esta razón hay que comprobar el valor de clave de búsqueda de cada registro en el cajón para verificar que el registro es el que queremos, el procedimiento es muy similar para el proceso de borrado y actualización de datos.
 
 ## Funciones de Asociación
 
-Una función de asociación ideal distribuye las claves almacenadas uniformemente a través de los cajones para que cada uno de ellos tenga el mismo número de registros. Es por eso que se debe elegir una función de asociación que asigne los valores de las clave de búsqueda a los cajones de manera que se cumpla lo siguiente:
+Una función de asociación ideal distribuye las claves almacenadas uniformemente a través de los cajones para que cada uno de ellos tenga el mismo número de registros. Es por eso que se debe elegir una función de asociación que asigne los valores de las claves de búsqueda a los cajones de manera que se cumpla lo siguiente:
 
-1. **Distribución uniforme**. cada cajón tiene asignado el mismo número de valores de la clave de búsqueda dentro del conjunto de todos los valores posibles de la clave de búsqueda.
+1. **Distribución uniforme**. Cada cajón tiene asignado el mismo número de valores de la clave de búsqueda dentro del conjunto de todos los valores posibles de la clave de búsqueda.
 2. **Distribución aleatoria**. En el caso promedio, cada cajón tendrá casi la misma cantidad de valores asignados a él, sin tener en cuenta la distribución real de los valores de la clave de búsqueda.
 
 Como una ilustración de estos principios, vamos a escoger una función de asociación para el archivo cuenta utilizando la clave de búsqueda *nombre-sucursal*. Supóngase que se decide tener 26 cajones y se define una función de asociación que asigna a los nombres que empiezan con la letra i-ésima del alfabeto el i-ésimo cajón. Esta función de asociación es simple, pero no logra proporcionar una distribución uniforme, ya que se espera, por ejemplo, tener más nombres de sucursales que comienzan con letras como ***B*** y ***R*** que con ***Q*** y ***X***.
 Se quiere una función de asociación en la clave de búsqueda *saldo*. Se tiene un rango de valores y una función de asociación que divide el valor en 10 rangos. La distribución de los valores de la clave de búsqueda es uniforme, debido a que cada cajón va a tener aproximadamente el mismo número de valores del saldo diferente, pero no es aleatorio lo que genera que los registros con saldos más comunes se concentren en uno o algunos de los cajones haciendo que la distribución no sea uniforme.
-Asegurar la aleatoriedad en la función de asociación es fundamental, debido a que incluso si hubiera estas correlaciones en las clave de búsqueda, la aleatoriedad de la distribución hará que todos los cajones tengan más o menos la misma cantidad de registros, siempre que cada clave de búsqueda aparezca sólo en una pequeña fracción de registros.
+Asegurar la aleatoriedad en la función de asociación es fundamental, debido a que incluso si hubiera estas correlaciones en las claves de búsqueda, la aleatoriedad de la distribución hará que todos los cajones tengan más o menos la misma cantidad de registros, siempre que cada clave de búsqueda aparezca sólo en una pequeña fracción de registros.
 
 >[!tldr] Importancia de una una Buena Función de Asociación
 >Una mala función de asociación podría provocar que una búsqueda tome un tiempo proporcional al número de claves de búsqueda en el archivo. Una función bien diseñada en un caso medio de búsqueda toma un tiempo constante, independiente de la cantidad de claves de búsqueda en el archivo.
@@ -35,7 +35,7 @@ No siempre cuando se inserta un registro, el cajón al que se asigna va a tener 
 Para reducir la probabilidad de desbordamiento de cajones, se escoge el número de cajones mediante la siguiente ecuación:
 
 $$\frac{n_r}{f_r}\times(1 + d)$$
-Donde $d$ es un factor normalmente con un valor cercano a $0,2$. Aún con la asignación de unos pocos más de cajones de los requeridos, el desbordamiento de cajones todavía puede suceder. En estos casos se utiliza ***cajones de desbordamiento***, en los cuales si un registro se tiene que insertar en un cajón $c$ y $c$ está ya lleno, se proporcionará un cajón de desbordamiento para $c$ y el registro se insertará en el cajón de desbordamiento. Si el cajón de desbordamiento está también lleno, se proporcionará otro cajón de desbordamiento, y así sucesivamente, generando una lista enlazada denominada ***cadena de desbordamiento***.
+Donde $d$ es un factor normalmente con un valor cercano a $0,2$. Aun con la asignación de unos pocos más de cajones de los requeridos, el desbordamiento de cajones todavía puede suceder. En estos casos se utiliza ***cajones de desbordamiento***, en los cuales si un registro se tiene que insertar en un cajón $c$ y $c$ está ya lleno, se proporcionará un cajón de desbordamiento para $c$ y el registro se insertará en el cajón de desbordamiento. Si el cajón de desbordamiento está también lleno, se proporcionará otro cajón de desbordamiento, y así sucesivamente, generando una lista enlazada denominada ***cadena de desbordamiento***.
 
 ![[cadena-desbordamiento.png]]
 
@@ -43,7 +43,7 @@ La forma de la estructura asociativa que se acaba de describir se denomina algun
 
 ## Índices Asociativos
 
-La asociatividad se puede utilizar no solamente para la organización de archivos sino también para la creación de estructuras de índice. Un índice asociativo organiza las claves de búsqueda y sus punteros asociados, dentro de una estructura de archivo asociativo. Estos indices se construyen de la siguiente manera:
+La asociatividad se puede utilizar no solamente para la organización de archivos sino también para la creación de estructuras de índice. Un índice asociativo organiza las claves de búsqueda y sus punteros asociados, dentro de una estructura de archivo asociativo. Estos índices se construyen de la siguiente manera:
 
 1. Se aplica una función de asociación sobre la clave de búsqueda para identificar un cajón.
 2. Se almacenan la clave y los punteros asociados en el cajón o en los cajones de desbordamiento.
@@ -60,7 +60,7 @@ La necesidad de fijar el conjunto $C$ de direcciones de cajón presenta un probl
 
 Algunas técnicas de ***asociación dinámica*** permiten modificar la función de asociación dinámicamente para acomodarse al aumento o disminución del tamaño de la base de datos.
 Una forma de asociación dinámica es la ***asociación extensible***, la cual hace frente a los cambios del tamaño de la base de datos dividiendo y fusionando los cajones a medida que esta aumenta o disminuye. Como resultado se conserva eficazmente el espacio. Por otra parte, como la reorganización se realiza sobre un cajón a la vez, la degradación del rendimiento es aceptablemente baja.
-Con la asociación extensible se elige una función de asociación $h$ con las propiedades deseadas de uniformidad y aleatoriedad. Sin embargo, esta función de asociación genera valores dentro de un rango relativamente amplio, llamado, enteros binarios de $b$ bits. Inicialmente no se utiliza el total de $b$ bits del valor de la función de asociación, para hacer redirigir el valor a su cajón correspondiente. En cualquier caso, empleamos $i$ bits, donde $0 < i < b$. Estos $i$ bits son utilizados como desplazamiento en la ***tabla de direcciones de cajones (TDC)*** la cual contiene un puntero a cada uno de los cajones con los indices. El valor de $i$ aumenta o disminuye de acuerdo a la cantidad de cajones que existan en ese momento, ya que para hacer frente al crecimiento de la base de datos se crean y eliminan cajones bajo demanda, de acuerdo a la cantidad de registros que existan.
+Con la asociación extensible se elige una función de asociación $h$ con las propiedades deseadas de uniformidad y aleatoriedad. Sin embargo, esta función de asociación genera valores dentro de un rango relativamente amplio, llamado, enteros binarios de $b$ bits. Inicialmente, no se utiliza el total de $b$ bits del valor de la función de asociación, para hacer redirigir el valor a su cajón correspondiente. En cualquier caso, empleamos $i$ bits, donde $0 < i < b$. Estos $i$ bits son utilizados como desplazamiento en la ***tabla de direcciones de cajones (TDC)*** la cual contiene un puntero a cada uno de los cajones con los índices. El valor de $i$ aumenta o disminuye de acuerdo a la cantidad de cajones que existan en ese momento, ya que para hacer frente al crecimiento de la base de datos se crean y eliminan cajones bajo demanda, de acuerdo a la cantidad de registros que existan.
 
 #### Consulta y Actualización
 
@@ -77,7 +77,7 @@ Si $i>i_j$​, significa que hay más de una entrada en la TDC que apunta al caj
 
 Una vez ajustada la TDC, se recalcula la función de asociación para cada registro en el cajón $j$ utilizando los nuevos valores de $i_j$​ e $i_z$​. Esto determinará si los registros permanecen en el cajón $j$ o se trasladan al nuevo cajón $z$. Luego se vuelve a intentar la inserción, en caso de que vuelva a fallar, se aplica uno de los dos casos expuestos anteriormente.
 
-### Eliminación
+#### Eliminación
 
 En ambas de las situaciones planteadas anteriormente sólo se necesita recalcular la función de asociación en los registros del cajón $j$. Para borrar un registro con valor de la clave de búsqueda $K_i$ se sigue el mismo procedimiento de búsqueda anterior, finalizando en algún cajón correspondiente. A continuación se borran los registros del archivo y la clave de búsqueda del cajón y el cajón en caso de que este esté vacío. Nótese que en este momento, varios cajones se pueden fusionar, reduciendo el tamaño de la TDC a la mitad. No obstante, a diferencia de la fusión de cajones, el cambio de tamaño de la TDC es una operación muy costosa si la tabla es grande. Por tanto, sólo sería aconsejable reducir el tamaño de la TDC si el número de cajones se reduce considerablemente.
 
